# docs/swagger.json
@@ -35,6 +35,12 @@
                         "schema": {
                             "$ref": "#/definitions/presentation.HealthResponse"
                         }
+                    },
+                    "503": {
+                        "description": "Health status response",
+                        "schema": {
+                            "$ref": "#/definitions/presentation.HealthResponse"
+                        }
                     }
                 }
             }
